--- a/hyper/src/html/partials/left-sidebar-AM.html
+++ b/hyper/src/html/partials/left-sidebar-AM.html
@@ -55,7 +55,7 @@
             </li>
 
             <li class="side-nav-item">
-                <a href="apps-chat.html" class="side-nav-link">
+                <a href="system.html" class="side-nav-link">
                     <i class="dripicons-gear"></i>
                     <span> System </span>
                 </a>
