Starting index page

--- a/hyper/src/assets/scss/config/html/_custom-variables-dark.scss
+++ b/hyper/src/assets/scss/config/html/_custom-variables-dark.scss
@@ -7,7 +7,7 @@ $shadow:                            0 0 35px 0 rgba(49, 57, 66, 0.5);
 $shadow-lg:                         0 0 45px 0 rgba(0, 0, 0, 0.12);
 
 //Background left-sidebar
-$bg-leftbar:                      #4472c4;
+$bg-leftbar:                      #37404a;
 $bg-leftbar-light:                #ffffff;
 $bg-leftbar-dark:                 #37404a;
 $bg-topnav:                       #37404a;
