--- a/hyper/src/html/partials/topbar-AM.html
+++ b/hyper/src/html/partials/topbar-AM.html
@@ -3,7 +3,7 @@
     <ul class="list-unstyled topbar-right-menu float-right mb-0">
         <li class="dropdown notification-list d-lg-none">
             <a class="nav-link dropdown-toggle arrow-none" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                <i class="dripicons-search noti-icon"></i>
+                <!-- <i class="dripicons-search noti-icon"></i> -->
             </a>
             
         </li>
