--- a/hyper/src/html/partials/left-sidebar-AM.html
+++ b/hyper/src/html/partials/left-sidebar-AM.html
@@ -19,7 +19,12 @@
 
          <!--    <li class="side-nav-title side-nav-item">Navigation</li> -->
          <li class="side-nav-title side-nav-item"></li>
-
+			<li class="side-nav-item">
+                <a href="index.html" class="side-nav-link">
+                    <i class="dripicons-home"></i>
+                    <span> Home </span>
+                </a>
+            </li>
             <li class="side-nav-item">
 
                 <a href="javascript: void(0);" class="side-nav-link">
